--- a/src/components/modules/Search.module.css
+++ b/src/components/modules/Search.module.css
@@ -90,7 +90,15 @@
     border-radius: 5px;
     color: #fff;
     margin-left: 20px;
+    margin-top: 10px;
     padding: 0 10px;
+}
+@media (max-width: 600px){
+    .searchBox select{
+        width: 300px;
+        margin-left: 0px;
+        margin-top: 10px;
+    }
 }
 
 .searchBox select:focus{
